<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    tools:context=".Fragments.RegisterFragment.RegisterFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/appcolor" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/appcolor"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/createanaccont"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundcornerstroke"
        android:gravity="start"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
    <EditText
        android:id="@+id/etphonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundcornerstroke"
        android:gravity="start"
        android:hint="@string/phnnumber"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="16sp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundcornerstroke"
        android:gravity="start"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="16sp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />



    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundcornerstroke"
        android:gravity="start"
        android:hint="@string/password"
        android:textSize="16sp"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundcornerstroke"
        android:gravity="start"
        android:hint="@string/confirmpass"
        android:textSize="16sp"
        android:inputType="textWebPassword"
        android:visibility="gone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />



    <Button
        android:id="@+id/btnregister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundcorner"
        android:gravity="center"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadhaveaccout"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentBottom="true"
                    android:scaleType="fitXY"

                    android:src="@drawable/bottomdesign" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>