<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context=".Fragments.ChangePasswordFragment.ChangePasswordFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/appcolor" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changepassword"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundcornerstroke"
        android:gravity="center"
        android:hint="@string/newpassword"
        android:textSize="16sp"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
    <EditText
        android:id="@+id/etconfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundcornerstroke"
        android:gravity="center"
        android:hint="@string/confirmpassword"
        android:textSize="16sp"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/roundcorner"
        android:gravity="center"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="16sp" />

</LinearLayout>
</LinearLayout>