<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context=".Fragments.AddProductFragment.AddProductFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/appcolor" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Product"
            android:textColor="@color/black"
            android:gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:textSize="24sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/productname"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"/>
    <EditText
        android:id="@+id/etproductname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@color/greylight"
        android:padding="10dp"
        android:singleLine="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/description"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"/>
        <EditText
            android:id="@+id/etdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@color/greylight"
            android:padding="10dp"
            android:singleLine="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/date"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"/>
        <TextView
            android:id="@+id/tvdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@color/greylight"
            android:padding="15dp"
            android:maxLength="10"
            android:singleLine="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Quantity"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"/>
        <EditText
            android:id="@+id/etquality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:background="@color/greylight"
            android:padding="10dp"
            android:singleLine="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/costprice"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"/>
        <EditText
            android:id="@+id/etprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@color/greylight"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sellingprice"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"/>
        <EditText
            android:id="@+id/etsellingprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:background="@color/greylight"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/addimagepro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/grey"
            android:src="@drawable/addimages"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tvaddimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add image"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:fontFamily="@font/poppins_bold"/>
        <Button
            android:id="@+id/btnaddproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addproduct"
            android:textColor="@color/white"
            android:background="@drawable/roundcorner"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:layout_marginBottom="60dp"/>


    </LinearLayout>
    </ScrollView>
</LinearLayout>